samples/_failures_safe/1761601358_b4415a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12a4adb5.c: In function ‘main’:
./samples/SAFE/__tmp_12a4adb5.c:141:9: error: expected declaration or statement at end of input
  141 |         int level = parse_log_level(buffer);
      |         ^~~
./samples/SAFE/__tmp_12a4adb5.c:141:9: error: expected declaration or statement at end of input
